Cascading Change Log

2.1.1 [unreleased]

  Fixed NPE with c.s.l.TextDelimited when line after header was null.

  Fix for c.s.u.DelimitedParser not fully honoring the default strict parsing policy. This resolution may cause
  some text delimited files to fail if they have arbitrary numbers of fields.

  Added quote and delimiter getters to c.s.l.TextDelimited and c.s.h.TextDelimited.

  Fixed issue where a c.f.FlowStep being skipped was not considered successful after 2.0.7 merge.

2.1.0

  Fixed issue where c.p.a.Coerce would coerce a null value to 0 if the coerce type was a j.l.Number
  instead of a numeric primitive, or false if the coerce type was j.l.Boolean instead of boolean.

  Fixed issue where c.s.u.DelimitedParser did not honor number of field found in a text delimited file header.

  Fixed issue where c.t.Tap#openForWrite did not honor the c.t.SinkMode#REPLACE setting.

  Added version update check to print out latest available release. Use system property cascading.update.skip=true
  to disable.

  Updated all tuple stream permutations to minimize new c.t.Tuple instantiations and maximize upstream Tuple reuse.

  Updated janino to version 2.6.1.

  Updated c.s.l.TextLine, c.s.l.TextDelimited, c.s.h.TextLine, and c.s.h.TextDelimited to encode/decode any supported
  j.n.c.Charset.

  Fixed issue where c.o.t.DateParser may throw an NPE if the value to be parsed was null.

  Added c.p.Props#buildProperties( Iterable<Map.Entry<String, String>> defaultProperties ) to allow for re-using
  and existing o.a.h.m.JobConf instances as default properties.

  Added c.p.a.FirstBy partial aggregator to allow for capturing first seen c.t.Tuple in a Tuple stream. Argument
  c.f.Fields j.u.Comparators are honored for secondary sorting.

  Updated c.p.a.AggregateBy to honor argumentField c.f.Fields j.u.Comparator instances for secondary sorting.

  Updated c.o.a.First to accumulate the first N seen c.t.Tuple instances.
